--- a/src/views/detail/detail.css
+++ b/src/views/detail/detail.css
@@ -16,12 +16,12 @@
   height: auto;
 }
 .list_search {
-  width: 96%;
+  width: 100%;
   height: 0.88rem;
   border: 1px solid #fff;
   margin-top: 0.2rem;
   text-align: center;
-  margin-left: 2%;
+  /* margin-left: 2%; */
   background: #fff;
   border-radius: 0.1rem;
 }
