--- a/src/views/details/details.css
+++ b/src/views/details/details.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: auto;
   height: calc(100% - 0.88rem);
-  background: #dec;
+  background: #fff;
 }
 .list_list {
   width: 100%;
