分类热租仪器

--- a/src/views/detail/detail.css
+++ b/src/views/detail/detail.css
@@ -18,8 +18,8 @@
 .list_search {
   width: 100%;
   height: 0.88rem;
-  border: 1px solid #fff;
-  margin-top: 0.2rem;
+  /* border: 1px solid #fff; */
+  /* margin-top: 0.2rem; */
   text-align: center;
   /* margin-left: 2%; */
   background: #fff;
