--- a/src/views/details/details.css
+++ b/src/views/details/details.css
@@ -1,8 +1,9 @@
 .container {
   width: 100%;
   height: auto;
-  height: calc(100% - 0.88rem);
+
   background: #fff;
+  padding-bottom:1.5rem;
 }
 .list_list {
   width: 100%;
