--- a/src/views/details/details.css
+++ b/src/views/details/details.css
@@ -1,7 +1,6 @@
 .container {
   width: 100%;
   height: auto;
-
   background: #fff;
   padding-bottom:1.5rem;
 }
@@ -10,8 +9,8 @@
   height: auto;
 }
 .banner {
-  width: 7.086rem;
-  height: 5rem;
+  width: 94.6%;
+  height: px2rem(250px);
   margin: 0.2rem auto 0;
 }
 .banner img {
@@ -19,7 +18,7 @@
   height: 100%;
 }
 .ban_cent {
-  width: 7.086rem;
+  width: 100%;
   padding-bottom: 10px;
   margin: 0.2rem auto 0;
   box-shadow: 0 2px 9px 0 #eeeeee;
